--- a/blocks/cards/__cards-item/cards__card-item.css
+++ b/blocks/cards/__cards-item/cards__card-item.css
@@ -1,64 +1,14 @@
 .cards__card-item {
   display: flex;
   flex-direction: column;
-  /* max-width: 380px;
-  max-height: 521px; */
   border-radius: 10px;
   background-color: #f3f3f3;
-  /* margin: 0 29px 50px 0; */
   box-sizing: border-box;
-  transition: all ease-in-out 0.4s;
+  transition: all ease-in-out 0.2s;
+  box-shadow: 0px 7px 10px rgba(34, 35, 58, 0.5);
 }
 .cards__card-item:hover {
+  box-shadow: 0px 14px 20px rgba(34, 35, 58, 0.5);
   transform: scale(1.01, 1.01);
-  opacity: 0.92;
+  opacity: 0.95;
 }
-/* .cards__card-item:nth-child(6) {
-  margin: 0 0 50px 0;
-}
-.cards__card-item:nth-child(3) {
-  margin-right: 0;
-}
-@media all and (max-width: 1212px) {
-  .cards__card-item:nth-child(3) {
-    margin-right: 29px;
-  }
-  .cards__card-item:nth-child(2) {
-    margin-right: 0;
-  }
-  .cards__card-item:nth-child(4) {
-    margin-right: 0;
-  }
-}
-@media all and (max-width: 815px) {
-  .cards__card-item {
-    max-width: 340px;
-  }
-}
-@media all and (max-width: 739px) {
-  .cards__card-item {
-    margin-right: 4px;
-  }
-  .cards__card-item:nth-child(3) {
-    margin-right: 4px;
-  }
-}
-@media all and (max-width: 711px) {
-  .cards__card-item {
-    margin-right: 4px;
-    margin-bottom: 25px;
-    max-width: 320px;
-  }
-  .cards__card-item:nth-child(3) {
-    margin-right: 4px;
-  }
-  .cards__card-item:nth-child(6) {
-    margin-right: 0;
-    margin-bottom: 25px;
-  }
-}
-@media all and (max-width: 390px) {
-  .cards__card-item {
-    max-width: 95%;
-  }
-} */
