--- a/blocks/cards/__like/cards__like.css
+++ b/blocks/cards/__like/cards__like.css
@@ -14,12 +14,15 @@
   cursor: pointer;
   padding: 0;
   margin: 0;
-  transition: all ease-in-out 0.4s;
+  transition: all ease-in-out 0.2s;
 }
 .cards__like_type_active {
   background-image: url("../../../image/svg/avtive-like.svg");
 }
 .cards__like:hover {
-  transform: scale(1.04, 1.04);
-  opacity: 0.8;
+  opacity: 0.9;
+}
+.cards__like:active {
+  transform: scale(2.02, 2.01);
+  opacity: 1;
 }
