--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -1,25 +1,34 @@
 .popup__button {
-    color: #FFFFFF;
-    font-size: 18px;
-    line-height: 1.2;
-    width: 80%;
-    height: 50px;
-    text-align: center;
-    background-color: #6ebbd3;
-    border-radius: 10px;
-    border: none;
-    margin: 20px 0;
-    box-sizing: border-box;
-    cursor: pointer;
+  color: #ffffff;
+  font-size: 18px;
+  line-height: 1.2;
+  width: 80%;
+  height: 50px;
+  text-align: center;
+  background-color: #6ebbd3;
+  border-radius: 10px;
+  border: none;
+  margin: 20px 0;
+  box-sizing: border-box;
+  cursor: pointer;
+  transition: all ease-in-out 0.2s;
+  box-shadow: 0px 5px 10px rgba(34, 35, 58, 0.5);
+  outline: none;
 }
 
 .popup__button:hover {
-    transition: opacity ease-in-out 0.4s;
-    opacity: 0.8;
+  box-shadow: 0px 14px 20px rgba(34, 35, 58, 0.5);
+  background-color: #2a7186;
+  opacity: 0.8;
+}
+.popup__button:active {
+  box-shadow: 0px 18px 25px rgba(34, 35, 58, 0.5);
+  transform: scale(1.05, 1.05);
+  background-color: #276375;
+  opacity: 0.8;
 }
 @media all and (max-width: 682px) {
-
-    .popup__button {
-        font-size: 14px;
-    }
+  .popup__button {
+    font-size: 14px;
+  }
 }
