--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -1,29 +1,28 @@
 .popup__close {
-    background-color: initial;
-    border: 0;
-    width: 40px;
-    height: 40px;
-    position: absolute;
-    padding: 0;
-    top: -41px;
-    right: -37px;
-    cursor: pointer;
-    background-image: url('../../../image/svg/CloseIcon.svg');
-    background-repeat: no-repeat;
-    background-position: center;
-    transition: opacity ease-in-out 0.4s;
+  background-color: initial;
+  border: 0;
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  padding: 0;
+  top: -41px;
+  right: -37px;
+  cursor: pointer;
+  background-image: url("../../../image/svg/CloseIcon.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  transition: all ease-in-out 0.3s;
 }
 
 .popup__close:hover {
-
-    opacity: 0.8;
+  opacity: 0.8;
 }
 
 @media all and (max-width: 682px) {
-    .popup__close {
-        top: -45px;
-        right: 10px;
-        width: 26px;
-        height: 26px;
-    }
+  .popup__close {
+    top: -45px;
+    right: 10px;
+    width: 26px;
+    height: 26px;
+  }
 }
