--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,18 +1,16 @@
 .popup__container {
-    position: relative;
-    width: 430px;
-    background-color: #FFFFFF;
-    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
-    border-radius: 10px;
-    margin: 0;
-    padding-bottom: 10px;
-    
+  position: relative;
+  width: 430px;
+  background-color: #ffffff;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
+  margin: 0;
+  padding-bottom: 10px;
 }
 
 @media all and (max-width: 682px) {
-
-    .popup__container {
-        width: 282px;
-        padding-bottom: 25px;
-    }
+  .popup__container {
+    width: 282px;
+    padding-bottom: 25px;
+  }
 }
