--- a/pages/index.css
+++ b/pages/index.css
@@ -7,6 +7,7 @@
 @import url("../blocks/page/page.css");
 
 @import url("../blocks/header/header.css");
+@import url("../blocks/header/hamburger-menu/hamburger-menu.css");
 
 @import url("../blocks/content/content.css");
 
