finish BIM files

--- a/blocks/cards/__tex-container/card__tex-container.css
+++ b/blocks/cards/__tex-container/card__tex-container.css
@@ -4,21 +4,21 @@
 }
 @media all and (max-width: 1179px) {
   .card__tex-container {
-    margin: 0 auto 0 10px;
+    margin-left: 10px;
   }
 }
 @media all and (max-width: 900px) {
   .card__tex-container {
-    margin: 0 auto 0 29px;
+    margin-left: 29px;
   }
 }
 @media all and (max-width: 641px) {
   .card__tex-container {
-    margin: 0 auto 0 15px;
+    margin-left: 15px;
   }
 }
 @media all and (max-width: 590px) {
   .card__tex-container {
-    margin: 0 auto 0 29px;
+    margin-left: 29px;
   }
 }
