--- a/pages/index.css
+++ b/pages/index.css
@@ -6,12 +6,27 @@
 
 @import url("../blocks/page/page.css");
 
-@import url("../blocks/header/header.css");
-@import url("../blocks/header/hamburger-menu/hamburger-menu.css");
-
 @import url("../blocks/content/content.css");
 
+/* header */
+@import url("../blocks/header/header.css");
+@import url("../blocks/header/__container/header__container.css");
+@import url("../blocks/header/__info-container/header__info-container.css");
+@import url("../blocks/header/__container-left/header__container-left.css");
+@import url("../blocks/header/__nav-bar/header__nav-bar.css");
+@import url("../blocks/header/__title/header__title.css");
+@import url("../blocks/header/__logo/header__logo.css");
+@import url("../blocks/header/__link/header__link.css");
+@import url("../blocks/header/__phone-number/header__phone-number.css");
+@import url("../blocks/header/__phone-subtitle/header__phone-subtitle.css");
+@import url("../blocks/header/hamburger-menu/hamburger-menu.css");
+/* end header */
+
+/* selector */
 @import url("../blocks/selector/selector.css");
+@import url("../blocks/selector/__title/selector__title.css");
+@import url("../blocks/selector/__select/selector__select.css");
+/* selector */
 
 /* start cards */
 @import url("../blocks/cards/cards.css");
@@ -29,16 +44,34 @@
 @import url("../blocks/cards/__btn/card__btn.css");
 @import url("../blocks/cards/__box-sale/cards__box-sale.css");
 @import url("../blocks/cards/__age-container/cards__age-container.css");
+@import url("../blocks/cards/__pow-container/cards__pow-container.css");
 /* end cards */
 
+/* add item */
 @import url("../blocks/add-items/add-items.css");
+@import url("../blocks/add-items/__btn/add-items__btn.css");
+/* end add item */
 
-@import url("../blocks/btn/btn.css");
+/* start btn scroll up */
+@import url("../blocks/btn-scroll/btn-scroll.css");
+@import url("../blocks/btn-scroll/__up/btn-scroll__up.css");
+/* start btn scroll up */
 
+/* start footer */
 @import url("../blocks/footer/footer.css");
+@import url("../blocks/footer/__info-container/footer__info-container.css");
+@import url("../blocks/footer/__inputs/footer__inputs.css");
+@import url("../blocks/footer/__title/footer__title.css");
+@import url("../blocks/footer/__subtitle/footer__subtitle.css");
+@import url("../blocks/footer/__input-email/footer__input-email.css");
+@import url("../blocks/footer/__btn-submit/footer__btn-submit.css");
+@import url("../blocks/footer/__check-box/footer__check-box.css");
+@import url("../blocks/footer/__label/footer__label.css");
 @import url("../blocks/footer/__input-error/footer__input-error.css");
 @import url("../blocks/footer/__input-error/_visible/footer__error_visible.css");
+/* end footer */
 
+/* popup */
 @import url("../blocks/popup/popup.css");
 @import url("../blocks/popup/__close/popup__close.css");
 @import url("../blocks/popup/__container/popup__container.css");
