--- a/blocks/btn-scroll/__up/btn-scroll__up.css
+++ b/blocks/btn-scroll/__up/btn-scroll__up.css
@@ -1,4 +1,4 @@
-.btn__up {
+.btn-scroll__up {
   outline: none;
   border: none;
   text-align: center;
@@ -8,7 +8,7 @@
   width: 59px;
   height: 59px;
   background-color: #6ebbd3;
-  background-image: url("../../image/svg/arrow.svg");
+  background-image: url("../../../image/svg/arrow.svg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: auto;
@@ -19,20 +19,20 @@
   cursor: pointer;
   transition: all ease-in-out 0.2s;
   box-shadow: 0px 14px 20px rgba(34, 35, 58, 0.5);
-  opacity: .5;
+  opacity: 0.5;
 }
-.btn__up:hover {
+.btn-scroll__up:hover {
   box-shadow: 0px 24px 40px rgba(34, 35, 58, 0.5);
   background-color: #2a7186;
   opacity: 1;
 }
-.btn__up:active {
+.btn-scroll__up:active {
   transform: scale(1.05, 1.05);
   background-color: #1a5061;
   opacity: 1;
 }
 @media all and (max-width: 450px) {
-  .btn__up {
+  .btn-scroll__up {
     width: 40px;
     height: 40px;
   }
