--- a/blocks/cards/__age-container/cards__age-container.css
+++ b/blocks/cards/__age-container/cards__age-container.css
@@ -5,14 +5,19 @@
   margin: 0 46px 0 22px;
   padding: 0;
 }
-.cards__pow-container {
-  display: flex;
-  align-items: flex-start;
-  flex-direction: column;
-  padding: 0;
-}
+
 @media all and (max-width: 1114px) {
   .cards__age-container {
-    margin: 0 0 0 0;
+    margin: 0;
+  }
+}
+@media all and (max-width: 590px) {
+  .cards__age-container {
+    margin: 0 46px 0 22px;
+  }
+}
+@media all and (max-width: 401px) {
+  .cards__age-container {
+    margin: 0;
   }
 }
