--- a/blocks/add-items/__btn/add-items__btn.css
+++ b/blocks/add-items/__btn/add-items__btn.css
@@ -6,22 +6,32 @@
   font-size: 14px;
   line-height: 1.1;
   border: 1px solid #cacaca;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   border-radius: 10px;
   cursor: pointer;
   text-align: center;
+  -webkit-transition: all linear 0.4s;
+  -o-transition: all linear 0.4s;
   transition: all linear 0.4s;
   margin: 0;
+  -webkit-box-shadow: 0px 7px 10px rgba(34, 35, 58, 0.5);
   box-shadow: 0px 7px 10px rgba(34, 35, 58, 0.5);
 }
 .add-items__btn:hover {
   background-color: #d7eaf0a8;
+  -webkit-box-shadow: 0px 15px 20px rgba(34, 35, 58, 0.5);
   box-shadow: 0px 15px 20px rgba(34, 35, 58, 0.5);
+  -webkit-transform: scale(1.05, 1.05);
+  -ms-transform: scale(1.05, 1.05);
   transform: scale(1.05, 1.05);
   opacity: 0.8;
 }
 .add-items__btn:active {
+  -webkit-box-shadow: 0px 23px 28px rgba(34, 35, 58, 0.5);
   box-shadow: 0px 23px 28px rgba(34, 35, 58, 0.5);
+  -webkit-transform: scale(1.09, 1.09);
+  -ms-transform: scale(1.09, 1.09);
   transform: scale(1.09, 1.09);
   background-color: #78b3c5a8;
   opacity: 1;
