--- a/blocks/btn-scroll/__up/btn-scroll__up.css
+++ b/blocks/btn-scroll/__up/btn-scroll__up.css
@@ -12,21 +12,28 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: auto;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   color: #ffffff;
   padding: 0;
   margin: 0;
   cursor: pointer;
+  -webkit-transition: all ease-in-out 0.2s;
+  -o-transition: all ease-in-out 0.2s;
   transition: all ease-in-out 0.2s;
+  -webkit-box-shadow: 0px 14px 20px rgba(34, 35, 58, 0.5);
   box-shadow: 0px 14px 20px rgba(34, 35, 58, 0.5);
   opacity: 0.5;
 }
 .btn-scroll__up:hover {
+  -webkit-box-shadow: 0px 24px 40px rgba(34, 35, 58, 0.5);
   box-shadow: 0px 24px 40px rgba(34, 35, 58, 0.5);
   background-color: #2a7186;
   opacity: 1;
 }
 .btn-scroll__up:active {
+  -webkit-transform: scale(1.05, 1.05);
+  -ms-transform: scale(1.05, 1.05);
   transform: scale(1.05, 1.05);
   background-color: #1a5061;
   opacity: 1;
