--- a/blocks/cards/__age-container/cards__age-container.css
+++ b/blocks/cards/__age-container/cards__age-container.css
@@ -1,6 +1,13 @@
 .cards__age-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
   align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   margin: 0 46px 0 22px;
   padding: 0;
