--- a/blocks/cards/__card-info/cards__card-info.css
+++ b/blocks/cards/__card-info/cards__card-info.css
@@ -1,4 +1,8 @@
 .cards__card-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
