--- a/blocks/cards/__cards-item/cards__card-item.css
+++ b/blocks/cards/__cards-item/cards__card-item.css
@@ -1,14 +1,26 @@
 .cards__card-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   border-radius: 10px;
   background-color: #f3f3f3;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  -webkit-transition: all ease-in-out 0.2s;
+  -o-transition: all ease-in-out 0.2s;
   transition: all ease-in-out 0.2s;
+  -webkit-box-shadow: 0px 7px 10px rgba(34, 35, 58, 0.5);
   box-shadow: 0px 7px 10px rgba(34, 35, 58, 0.5);
 }
 .cards__card-item:hover {
+  -webkit-box-shadow: 0px 14px 20px rgba(34, 35, 58, 0.5);
   box-shadow: 0px 14px 20px rgba(34, 35, 58, 0.5);
+  -webkit-transform: scale(1.01, 1.01);
+  -ms-transform: scale(1.01, 1.01);
   transform: scale(1.01, 1.01);
   opacity: 0.95;
 }
