--- a/blocks/cards/__pow-container/cards__pow-container.css
+++ b/blocks/cards/__pow-container/cards__pow-container.css
@@ -1,6 +1,13 @@
 .cards__pow-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
   align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   padding: 0;
 }
