--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,8 +1,14 @@
 .cards {
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
   display: grid;
+  display: -ms-grid;
+  -ms-grid-columns: 1fr 1em 1fr 1em 1fr;
+  -ms-grid-rows: 1fr 1em 1fr 1em;
   grid-template-columns: repeat(3, 380px);
   gap: 22px 17px;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
