--- a/blocks/footer/__check-box/footer__check-box.css
+++ b/blocks/footer/__check-box/footer__check-box.css
@@ -8,12 +8,15 @@
   width: 18px;
   height: 18px;
   border-radius: 3px;
+  -webkit-transition: all ease-in-out 0.2s;
+  -o-transition: all ease-in-out 0.2s;
   transition: all ease-in-out 0.2s;
 }
 .footer__check-box:checked {
   background: #2aa1c0;
 }
 .footer__check-box:hover {
+  -webkit-filter: brightness(90%);
   filter: brightness(90%);
   opacity: 0.8;
 }
@@ -31,6 +34,8 @@
   height: 40%;
   border: solid #fff;
   border-width: 0 2px 2px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
   transform: rotate(45deg);
   display: none;
 }
