--- a/blocks/footer/__info-container/footer__info-container.css
+++ b/blocks/footer/__info-container/footer__info-container.css
@@ -1,6 +1,13 @@
 .footer__info-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 @media all and (max-width: 690px) {
