--- a/blocks/header/__container-left/header__container-left.css
+++ b/blocks/header/__container-left/header__container-left.css
@@ -1,13 +1,23 @@
 .header__container-left {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   max-width: 50%;
 }
 @media all and (max-width: 788px) {
   .header__container-left {
     width: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
   }
 }
