--- a/blocks/header/__container/header__container.css
+++ b/blocks/header/__container/header__container.css
@@ -1,6 +1,12 @@
 .header__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   padding-top: 40px;
   width: 1280px;
@@ -9,6 +15,9 @@
 }
 @media all and (max-width: 788px) {
   .header__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     padding: 0;
   }
