--- a/blocks/header/__info-container/header__info-container.css
+++ b/blocks/header/__info-container/header__info-container.css
@@ -1,13 +1,24 @@
 .header__info-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin: 1% 0 0;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-align: end;
+  -ms-flex-align: end;
   align-items: flex-end;
+  -ms-flex-item-align: start;
   align-self: flex-start;
 }
 @media all and (max-width: 788px) {
   .header__info-container {
+    -ms-flex-item-align: center;
     align-self: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     margin-top: 15px;
   }
