--- a/blocks/header/__nav-bar/header__nav-bar.css
+++ b/blocks/header/__nav-bar/header__nav-bar.css
@@ -2,7 +2,11 @@
   margin: 0;
   padding: 0;
   width: 70%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
   list-style: none;
 }
