--- a/blocks/header/hamburger-menu/hamburger-menu.css
+++ b/blocks/header/hamburger-menu/hamburger-menu.css
@@ -12,14 +12,20 @@
     opacity: 0;
   }
   #menu__toggle:checked ~ .menu__btn > span {
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
     transform: rotate(45deg);
   }
   #menu__toggle:checked ~ .menu__btn > span::before {
     top: 0;
+    -webkit-transform: rotate(0);
+    -ms-transform: rotate(0);
     transform: rotate(0);
   }
   #menu__toggle:checked ~ .menu__btn > span::after {
     top: 0;
+    -webkit-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
     transform: rotate(90deg);
   }
   #menu__toggle:checked ~ .menu__box {
@@ -28,7 +34,11 @@
   }
 
   .menu__btn {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     position: fixed;
     top: 20px;
@@ -47,6 +57,8 @@
     width: 100%;
     height: 3px;
     background-color: #ffffff;
+    -webkit-transition-duration: 0.25s;
+    -o-transition-duration: 0.25s;
     transition-duration: 0.25s;
   }
   .menu__btn > span::before {
@@ -70,7 +82,10 @@
     list-style: none;
     text-align: center;
     background-color: #000000b9;
+    -webkit-box-shadow: 1px 0px 6px rgba(0, 0, 0, 0.2);
     box-shadow: 1px 0px 6px rgba(0, 0, 0, 0.2);
+    -webkit-transition-duration: 0.25s;
+    -o-transition-duration: 0.25s;
     transition-duration: 0.25s;
   }
 
@@ -82,6 +97,8 @@
     font-size: 20px;
     font-weight: 600;
     text-decoration: none;
+    -webkit-transition-duration: 0.25s;
+    -o-transition-duration: 0.25s;
     transition-duration: 0.25s;
   }
   .menu__item:hover {
