--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -21,7 +21,11 @@
 
 @media all and (max-width: 788px) {
   .header {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     background-position-x: -350px;
   }
