--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -9,20 +9,28 @@
   border-radius: 10px;
   border: none;
   margin: 20px 0;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   cursor: pointer;
+  -webkit-transition: all ease-in-out 0.2s;
+  -o-transition: all ease-in-out 0.2s;
   transition: all ease-in-out 0.2s;
+  -webkit-box-shadow: 0px 5px 10px rgba(34, 35, 58, 0.5);
   box-shadow: 0px 5px 10px rgba(34, 35, 58, 0.5);
   outline: none;
 }
 
 .popup__button:hover {
+  -webkit-box-shadow: 0px 14px 20px rgba(34, 35, 58, 0.5);
   box-shadow: 0px 14px 20px rgba(34, 35, 58, 0.5);
   background-color: #2a7186;
   opacity: 0.8;
 }
 .popup__button:active {
+  -webkit-box-shadow: 0px 18px 25px rgba(34, 35, 58, 0.5);
   box-shadow: 0px 18px 25px rgba(34, 35, 58, 0.5);
+  -webkit-transform: scale(1.05, 1.05);
+  -ms-transform: scale(1.05, 1.05);
   transform: scale(1.05, 1.05);
   background-color: #276375;
   opacity: 0.8;
