--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -11,6 +11,8 @@
   background-image: url("../../../image/svg/CloseIcon.svg");
   background-repeat: no-repeat;
   background-position: center;
+  -webkit-transition: all ease-in-out 0.3s;
+  -o-transition: all ease-in-out 0.3s;
   transition: all ease-in-out 0.3s;
 }
 
