--- a/blocks/selector/__select/selector__select.css
+++ b/blocks/selector/__select/selector__select.css
@@ -9,6 +9,8 @@
   padding-right: 24px;
   margin-right: 55px;
   height: 25px;
+  -webkit-transition: opacity ease-in-out 0.2s;
+  -o-transition: opacity ease-in-out 0.2s;
   transition: opacity ease-in-out 0.2s;
 }
 .selector__select:hover {
