--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,5 +1,5 @@
 .page {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Montserrat";
   max-width: 1280px;
   min-width: 320px;
   margin: 0 auto;
