--- a/blocks/footer/__input-error/footer__input-error.css
+++ b/blocks/footer/__input-error/footer__input-error.css
@@ -1,11 +1,11 @@
 .footer__input-error {
-  color: #ff0000;
-  font-size: 12px;
-  line-height: 15px;
+  color: #b44545;
+  font-size: 10px;
+  line-height: 1.1;
   opacity: 1;
   position: absolute;
   left: 1px;
-  bottom: 1px;
+  top: -25px;
   -webkit-transition: opacity 0.3s;
   -o-transition: opacity 0.3s;
   transition: opacity 0.3s;
